--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header .navbar-expand-lg .navbar-nav .nav-link:hover {
 /*Hero Banner*/
 
 .hero-banner {
-  background: url("../images/IMG-20240430-WA0004.jpg") no-repeat;
+  background: url("../images/20240418_080003\ \(1\).jpg") no-repeat;
   background-size: cover;
   padding: 200px 0px;
   min-height: 500px;
@@ -519,7 +519,7 @@ ul.footer-menu li a {
 
 .logos-slide {
   white-space: nowrap;
-  animation: slide 5s linear infinite; /* Adjust timing as needed */
+  /* Adjust timing as needed */
 }
 
 .logos-slide img {
@@ -691,4 +691,893 @@ ul.footer-menu li a {
 
 hr{
   margin:60px;
+}
+.pdf-viewer {
+  width: 100%; /* Set width to 100% for responsiveness */
+  height: 690px; /* Adjust the height as needed */
+  border: 1px solid #ccc;
+  margin-top: 30px;
+  padding: 10px;
+  overflow: auto;
+}
+
+.pdf-viewer iframe {
+  width: 100%; /* Inherit width from .pdf-viewer for responsiveness */
+  height: 100%; /* Maintain 100% height for aspect ratio */
+}
+@media only screen and (max-width: 768px) {
+  /* Styles for mobile devices */
+  .element {
+    width: 100%; /* Example: Make elements full width on mobile */
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  /* Styles for tablets */
+  .element {
+    width: 70%; /* Example: Adjust element width for tablets */
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  /* Styles for desktops */
+  .element {
+    width: 80%; /* Example: Adjust element width for desktops */
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .pdf-viewer {
+    height: 500px; /* Adjust height for mobile */
+  }
+}
+
+.heading {
+  /* Style your heading here (font size, weight, etc.) */
+  font-family: "Great Vibes", cursive;
+  position: relative;
+}
+
+.heading:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px; /* Adjust height for line thickness */
+  background-color: #ccc; /* Adjust color for underline */
+  position: absolute;
+  bottom: -5px; /* Adjust position for underline placement */
+  left: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .row {
+    display: flex; /* Make the row a flex container */
+    flex-direction: column; /* Stack elements vertically */
+    gap: 29px; /* Adjust spacing between elements */
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .col-md-6 {
+    margin-bottom: 7px; /* Adjust spacing as needed */
+  }
+}
+
+.info-item .material-icons {
+ color: #008080;
+}
+
+.contact-info {
+  display: flex; /* Make contact-info a flex container */
+  flex-direction: column; /* Stack items vertically by default */
+}
+
+.info-item {
+  margin-bottom: 5px; /* Add some spacing between items */
+}
+
+.info-item.d-flex {
+  /* Override default behavior for mobile responsiveness */
+  flex-direction: row; /* Make items display horizontally on mobile */
+  align-items: center; /* Vertically align icon and text */
+}
+
+.material-icons {
+  margin-right: 5px; /* Add spacing between icon and text */
+}
+
+/**********************************************************
+  Wrapper Start
+**********************************************************/
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(80deg, #dbdada, #ffffffeb);
+}
+
+
+/**********************************************************
+  Slider Container Start
+**********************************************************/
+.slider-container {
+  max-width: 800px;
+  width: 80%;
+  aspect-ratio: 1000/667;
+  overflow: hidden;
+  box-shadow: 30px 40px 40px #00000063;
+  /* border: 2rem solid rgba(255, 255, 255, 0.196); */
+  transition: all .3s linear;
+  cursor: pointer;
+  position: relative;
+}
+
+
+.slider-container h1 {
+  white-space: nowrap;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  letter-spacing: .5rem;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13rem;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgba(255, 255, 255, 0);
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  transition: all .2s linear;
+  animation: scroll 8s linear infinite;
+}
+
+
+@media (hover:hover) {
+  .slider-container:hover>h1 {
+    -webkit-text-stroke-color: rgb(255, 255, 255);
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.103);
+  }
+}
+
+@keyframes scroll {
+  from {
+    left: 100%;
+  }
+
+  to {
+    left: -150%;
+  }
+
+}
+
+
+/**********************************************************
+   Images Container Start
+**********************************************************/
+.images-container {
+  width: calc(100% * var(--numberOfImgs));
+  height: 100%;
+  display: flex;
+  animation: slide var(--animation-duration) linear infinite;
+  transition: all .4s linear;
+}
+
+
+@keyframes slide {
+  0% {
+    margin-left: 0;
+  }
+
+  15% {
+    margin-left: 0;
+  }
+
+  18% {
+    margin-left: -100%;
+
+  }
+
+  33% {
+    margin-left: -100%;
+  }
+
+  36% {
+    margin-left: -200%;
+
+  }
+
+  51% {
+    margin-left: -200%;
+  }
+
+  54% {
+    margin-left: -300%;
+
+  }
+
+  69% {
+    margin-left: -300%;
+
+  }
+
+  72% {
+    margin-left: -400%;
+
+  }
+
+  87% {
+    margin-left: -400%;
+  }
+
+
+  90% {
+    margin-left: -500%;
+  }
+
+  100% {
+    margin-left: -500%;
+
+  }
+}
+
+
+.images-container img {
+  width: calc(100% / var(--numberOfImgs));
+  height: 100%;
+}
+
+
+/**********************************************************
+   Indicators Start
+**********************************************************/
+.indicators {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.indicator {
+  width: var(--indicator-width);
+  height: 1.5rem;
+  border-radius: var(--indicator-radius);
+  border: 2px solid var(--indicator-active-color);
+  cursor: pointer;
+  transition: all .2s linear;
+  animation: active var(--animation-duration) linear infinite;
+}
+
+
+/**********************************************************
+   Keyframes for Indicator-1
+**********************************************************/
+.indicator-1 {
+  animation: indi1 var(--animation-duration) linear infinite;
+}
+
+@keyframes indi1 {
+  0% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  15% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  18% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+
+  }
+
+  90% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+
+  }
+
+  91% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  100% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+
+  }
+
+}
+
+
+/**********************************************************
+   Keyframes for Indicator-2
+**********************************************************/
+.indicator-2 {
+  animation: indi2 var(--animation-duration) linear infinite;
+}
+
+
+@keyframes indi2 {
+  0% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  15% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  18% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  33% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  36% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  100% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+}
+
+
+/**********************************************************
+   Keyframes for Indicator-3
+**********************************************************/
+.indicator-3 {
+  animation: indi3 var(--animation-duration) linear infinite;
+}
+
+
+@keyframes indi3 {
+  0% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  33% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  36% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+
+  }
+
+  51% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  54% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  100% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+}
+
+
+/**********************************************************
+   Keyframes for Indicator-4
+**********************************************************/
+.indicator-4 {
+  animation: indi4 var(--animation-duration) linear infinite;
+}
+
+
+@keyframes indi4 {
+  0% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+
+  51% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+
+  }
+
+  54% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  69% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+  }
+
+  72% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+
+  }
+
+
+  100% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+}
+
+/**********************************************************
+   Keyframes for Indicator-5
+**********************************************************/
+.indicator-5 {
+  animation: indi5 var(--animation-duration) linear infinite;
+}
+
+
+@keyframes indi5 {
+  0% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  69% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  72% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+
+  }
+
+  87% {
+    background-color: var(--indicator-active-color);
+    width: var(--indicator-active-width);
+    border-radius: var(--indicator-active-radius);
+
+  }
+
+  90% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+
+  100% {
+    background-color: var(--indicator-color);
+    width: var(--indicator-width);
+    border-radius: var(--indicator-radius);
+  }
+}
+
+/**********************************************************
+  Reset Default Properties Start
+**********************************************************/
+
+
+
+/**********************************************************
+  Reset Default Properties End
+**********************************************************/
+
+
+
+/**********************************************************
+  Variables Start
+**********************************************************/
+:root {
+
+  --black: #000;
+  --white: #fff;
+
+  --numberOfImgs: 6;
+
+  --indicator-color: transparent;
+  --indicator-active-color: #000;
+  --indicator-width: 1.5rem;
+  --indicator-active-width: 3rem;
+  --indicator-radius: 50%;
+  --indicator-active-radius: 8px;
+
+  --animation-duration: 15s;
+}
+
+/*---------------------------------------
+  DONATE              
+-----------------------------------------*/
+.donate-section {
+  background-image: url("/images/ed3d3a74d77644262132e77dfe81819f.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.donate-form {
+  background: var(--white-color);
+  border-radius: var(--border-radius-medium);
+  position: relative;
+  overflow: hidden;
+  padding: 50px;
+}
+
+
+
+.skahftin {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 8%;
+}
+
+.galleria {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 30px;
+}
+
+.galleria img {
+  width: 100%;
+  /* height: 100%; */
+  object-fit: cover;
+}
+
+.galleria video {
+  width: 100%;
+  max-height: 340px; /* Adjust as needed */
+}
+
+@media only screen and (max-width: 768px) {
+  .galleria video {
+    height: 200px; /* Adjust height for smaller screens */
+  }
+  .about-text {
+    padding: 10% 5%; /* Adjust padding for better spacing */
+  }
+}
+
+:root {
+  --primary-color: #5c48ee;
+  --primary-color-dark: #0f1e6a;
+  --secondary-color: #f9fafe;
+  --text-color: #333333;
+  --white: #ffffff;
+  --max-width: 1200px;
+}
+.containerzzz {
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 1rem;
+  min-height: calc(100vh - 100px);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 5rem;
+}
+
+.content__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.content__container h1 {
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 3.5rem;
+  color: var(--primary-color-dark);
+  margin-bottom: 1rem;
+}
+
+.heading__1 {
+  font-weight: 700;
+}
+
+.heading__2 {
+  font-weight: 700;
+  color: var(--primary-color);
+}
+
+.content__container p {
+  font-size: 1rem;
+  color: var(--text-color);
+  margin-bottom: 2rem;
+}
+
+.content__container form {
+  display: flex;
+  align-items: center;
+}
+
+.content__container input {
+  width: 100%;
+  max-width: 300px;
+  padding: 1rem;
+  font-size: 0.8rem;
+  outline: none;
+  border: none;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.content__container button {
+  width: fit-content;
+  padding: 1rem;
+  font-size: 0.8rem;
+  white-space: nowrap;
+  background-color: var(--primary-color);
+  color: var(--white);
+  outline: none;
+  border: none;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.content__container button:hover {
+  background-color: var(--primary-color-dark);
+}
+
+.image__container {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  place-content: center;
+}
+
+.image__container img {
+  width: 100%;
+  max-width: 300px;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.image__container img:nth-child(1) {
+  transform: translateY(70px);
+}
+
+.image__container img:nth-child(2) {
+  transform: translateY(-70px);
+}
+
+.image__content {
+  position: absolute;
+  width: 100%;
+  max-width: 310px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-35%, 50%);
+  background: linear-gradient(
+    to right,
+    var(--primary-color),
+    var(--primary-color-dark)
+  );
+  color: var(--white);
+  padding: 1rem 2rem;
+  border-radius: 10px;
+}
+
+.image__content li {
+  margin-bottom: 0.5rem;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 900px) {
+  .containerzzz {
+    grid-template-columns: 1fr;
+  }
+
+  .content__container h1 {
+    font-size: 2.5rem;
+  }
+
+  .content__container p {
+    font-size: 1rem;
+  }
+
+  .content__container input {
+    max-width: 100%;
+  }
+
+  .image__container {
+    grid-template-columns: 1fr;
+    place-items: center; /* Combines place-content and align-items for centering */
+    margin-bottom: 2rem;
+  }
+
+  .image__container img {
+    transform: translateY(0);
+  }
+
+  .image__content {
+    max-width: 100%;
+    transform: translate(-50%, 50%); /* Center horizontally and vertically */
+    padding: 1rem;
+  }
+}
+
+@media (width < 900px) {
+  .link a:not(.nav__btn) {
+    display: none;
+  }
+
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .content__container {
+    text-align: center;
+  }
+
+  .content__container form {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .image__container {
+    grid-area: 1/1/2/2;
+  }
+
+  .image__container img {
+    transform: translateY(0) !important;
+  }
+}
+
+@media (max-width: 900px) {
+  .image__container {
+    display: flex; /* Use flexbox for stacking */
+    flex-direction: column; /* Stack images vertically */
+    align-items: center; /* Center images horizontally */
+    margin-bottom: 2rem;
+  }
+
+  .image__container img {
+    transform: translateY(0);
+    overflow: hidden;
+  }
+}
+
+
+.footer-area {
+  margin-top: 100px;
+  padding: 50px;
+  background-color: teal;
+  /* background: -moz-linear-gradient(left, #2749c4 0%, #6085b2 100%);
+  background: -webkit-linear-gradient(left, #2749c4 0%, #6085b2 ); */
+}
+
+
+.main{
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.footerz{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: row;
+
+}
+
+.single-footer{
+  width: 250px;
+}
+
+.single-footer ul li{
+  margin-bottom: 10px;
+  position: relative;
+  padding-left: 20px;
+}
+
+.copies p{
+  text-align: center;
+  text-transform: capitalize;
+  margin-top: 50px;
+  color: #fff;
+}
+
+.single-footer ul li a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.single-footer ul li a:hover{
+  text-decoration: none;
+  color: #e9e622;
+  margin-left: 10px;
+  transition: .4s ease-in;
+}
+
+.single-footer ul li a i{
+  position: absolute;
+  left: 0;
+  top: 5px;
+}
+
+.single-footer p{
+  color: #fff;
+}
+
+.single-footer h4{
+  text-transform: capitalize;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.footer-social a{
+  color: #fff;
+  border: 1px solid #6085b2;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .main{ 
+      width: 320px;
+    }
+    .single-footer{
+      width: 100%;
+      margin-bottom: 30px;
+    }
+}
+
+.map-container {
+  max-width: 100%; /* Set a max-width for the container */
+}
+
+@media (max-width: 768px) {
+  .map-container iframe {
+    width: 100%; /* Set width to 100% for mobile screens */
+  }
 }
